// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`indexing > indexRepo > updates indexes when records change. 1`] = `
[
  {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "description": "freshening things up",
    "did": "user(0)",
    "followersCount": 2,
    "followsCount": 2,
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "postsCount": 5,
    "viewer": {
      "blockedBy": false,
      "knownFollowers": {
        "count": 1,
        "followers": [
          {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "bobby",
            "handle": "bob.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "followedBy": "record(1)",
              "following": "record(0)",
              "muted": false,
            },
          },
        ],
      },
      "muted": false,
    },
  },
  {
    "cursor": "0000000000000__bafycid",
    "feed": [
      {
        "post": {
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(1)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "likeCount": 0,
          "quoteCount": 0,
          "record": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "text": "fresh post!",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(2)",
          "viewer": {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
      {
        "post": {
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(2)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "likeCount": 0,
          "quoteCount": 0,
          "record": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": {
              "parent": {
                "cid": "cids(4)",
                "uri": "record(5)",
              },
              "root": {
                "cid": "cids(3)",
                "uri": "record(4)",
              },
            },
            "text": "thanks bob",
          },
          "replyCount": 0,
          "repostCount": 1,
          "uri": "record(3)",
          "viewer": {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
        "reply": {
          "grandparentAuthor": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "parent": {
            "$type": "app.bsky.feed.defs#postView",
            "author": {
              "associated": {
                "activitySubscription": {
                  "allowSubscriptions": "followers",
                },
              },
              "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "did": "user(1)",
              "displayName": "bobby",
              "handle": "bob.test",
              "labels": [],
              "viewer": {
                "blockedBy": false,
                "followedBy": "record(1)",
                "following": "record(0)",
                "muted": false,
              },
            },
            "bookmarkCount": 0,
            "cid": "cids(4)",
            "embed": {
              "$type": "app.bsky.embed.images#view",
              "images": [
                {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(2)/cids(5)",
                  "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(2)/cids(5)",
                },
              ],
            },
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [
              {
                "cid": "cids(4)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "did:example:labeler",
                "uri": "record(5)",
                "val": "test-label",
              },
              {
                "cid": "cids(4)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "did:example:labeler",
                "uri": "record(5)",
                "val": "test-label-2",
              },
            ],
            "likeCount": 0,
            "quoteCount": 0,
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "embed": {
                "$type": "app.bsky.embed.images",
                "images": [
                  {
                    "alt": "../dev-env/assets/key-landscape-small.jpg",
                    "image": {
                      "$type": "blob",
                      "mimeType": "image/jpeg",
                      "ref": {
                        "$link": "cids(5)",
                      },
                      "size": 4114,
                    },
                  },
                ],
              },
              "reply": {
                "parent": {
                  "cid": "cids(3)",
                  "uri": "record(4)",
                },
                "root": {
                  "cid": "cids(3)",
                  "uri": "record(4)",
                },
              },
              "text": "hear that label_me label_me_2",
            },
            "replyCount": 1,
            "repostCount": 0,
            "uri": "record(5)",
            "viewer": {
              "bookmarked": false,
              "embeddingDisabled": false,
              "threadMuted": false,
            },
          },
          "root": {
            "$type": "app.bsky.feed.defs#postView",
            "author": {
              "associated": {
                "activitySubscription": {
                  "allowSubscriptions": "followers",
                },
              },
              "did": "user(0)",
              "handle": "alice.test",
              "labels": [],
              "viewer": {
                "blockedBy": false,
                "muted": false,
              },
            },
            "bookmarkCount": 0,
            "cid": "cids(3)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "likeCount": 3,
            "quoteCount": 0,
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000000Z",
              "text": "again",
            },
            "replyCount": 2,
            "repostCount": 1,
            "uri": "record(4)",
            "viewer": {
              "bookmarked": false,
              "embeddingDisabled": false,
              "threadMuted": false,
            },
          },
        },
      },
      {
        "post": {
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(6)",
          "embed": {
            "$type": "app.bsky.embed.record#view",
            "record": {
              "$type": "app.bsky.embed.record#viewRecord",
              "author": {
                "associated": {
                  "activitySubscription": {
                    "allowSubscriptions": "followers",
                  },
                  "chat": {
                    "allowIncoming": "none",
                  },
                },
                "did": "user(3)",
                "handle": "dan.test",
                "labels": [],
                "viewer": {
                  "blockedBy": false,
                  "following": "record(8)",
                  "muted": false,
                },
              },
              "cid": "cids(7)",
              "embeds": [
                {
                  "$type": "app.bsky.embed.record#view",
                  "record": {
                    "$type": "app.bsky.embed.record#viewRecord",
                    "author": {
                      "associated": {
                        "activitySubscription": {
                          "allowSubscriptions": "followers",
                        },
                      },
                      "did": "user(4)",
                      "handle": "carol.test",
                      "labels": [],
                      "viewer": {
                        "blockedBy": false,
                        "followedBy": "record(10)",
                        "muted": false,
                      },
                    },
                    "cid": "cids(8)",
                    "indexedAt": "1970-01-01T00:00:00.000Z",
                    "labels": [],
                    "likeCount": 2,
                    "quoteCount": 1,
                    "replyCount": 0,
                    "repostCount": 0,
                    "uri": "record(9)",
                    "value": {
                      "$type": "app.bsky.feed.post",
                      "createdAt": "1970-01-01T00:00:00.000Z",
                      "embed": {
                        "$type": "app.bsky.embed.recordWithMedia",
                        "media": {
                          "$type": "app.bsky.embed.images",
                          "images": [
                            {
                              "alt": "../dev-env/assets/key-landscape-small.jpg",
                              "image": {
                                "$type": "blob",
                                "mimeType": "image/jpeg",
                                "ref": {
                                  "$link": "cids(5)",
                                },
                                "size": 4114,
                              },
                            },
                            {
                              "alt": "../dev-env/assets/key-alt.jpg",
                              "image": {
                                "$type": "blob",
                                "mimeType": "image/jpeg",
                                "ref": {
                                  "$link": "cids(9)",
                                },
                                "size": 12736,
                              },
                            },
                          ],
                        },
                        "record": {
                          "record": {
                            "cid": "cids(10)",
                            "uri": "record(11)",
                          },
                        },
                      },
                      "text": "hi im carol",
                    },
                  },
                },
              ],
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "labels": [],
              "likeCount": 0,
              "quoteCount": 1,
              "replyCount": 0,
              "repostCount": 1,
              "uri": "record(7)",
              "value": {
                "$type": "app.bsky.feed.post",
                "createdAt": "1970-01-01T00:00:00.000Z",
                "embed": {
                  "$type": "app.bsky.embed.record",
                  "record": {
                    "cid": "cids(8)",
                    "uri": "record(9)",
                  },
                },
                "facets": [
                  {
                    "features": [
                      {
                        "$type": "app.bsky.richtext.facet#mention",
                        "did": "user(0)",
                      },
                    ],
                    "index": {
                      "byteEnd": 18,
                      "byteStart": 0,
                    },
                  },
                ],
                "text": "@alice.bluesky.xyz is the best",
              },
            },
          },
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [
            {
              "cid": "cids(6)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "did:example:labeler",
              "uri": "record(6)",
              "val": "test-label",
            },
          ],
          "likeCount": 2,
          "quoteCount": 0,
          "record": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": {
              "$type": "app.bsky.embed.record",
              "record": {
                "cid": "cids(7)",
                "uri": "record(7)",
              },
            },
            "text": "yoohoo label_me",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(6)",
          "viewer": {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
      {
        "post": {
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(3)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "likeCount": 3,
          "quoteCount": 0,
          "record": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000000Z",
            "text": "again",
          },
          "replyCount": 2,
          "repostCount": 1,
          "uri": "record(4)",
          "viewer": {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
      {
        "post": {
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(11)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [
            {
              "cid": "cids(11)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(12)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 0,
          "record": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": [
                {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(12)",
          "viewer": {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
    ],
  },
  {
    "cursor": "0000000000000__bafycid",
    "follows": [
      {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(3)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(8)",
          "muted": false,
        },
      },
      {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "following": "record(0)",
          "muted": false,
        },
      },
    ],
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "description": "freshening things up",
      "did": "user(0)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  },
]
`;

exports[`indexing > indexes posts. 1`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "facets": [
          {
            "features": [
              {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(2)",
              },
            ],
            "index": {
              "byteEnd": 9,
              "byteStart": 0,
            },
          },
        ],
        "text": "@bob.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "replies": [],
    "threadContext": {},
  },
}
`;

exports[`indexing > indexes posts. 2`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "facets": [
          {
            "features": [
              {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(2)",
              },
            ],
            "index": {
              "byteEnd": 11,
              "byteStart": 0,
            },
          },
        ],
        "text": "@carol.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "replies": [],
    "threadContext": {},
  },
}
`;

exports[`indexing > indexes posts. 3`] = `
{
  "createNotifications": [
    {
      "author": "user(1)",
      "did": "user(0)",
      "id": 0,
      "reason": "mention",
      "reasonSubject": null,
      "recordCid": "cids(0)",
      "recordUri": "record(0)",
      "sortAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "deleteNotifications": [],
  "updateNotifications": [
    {
      "author": "user(1)",
      "did": "user(2)",
      "id": 0,
      "reason": "mention",
      "reasonSubject": null,
      "recordCid": "cids(1)",
      "recordUri": "record(0)",
      "sortAt": "1970-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`indexing > indexes profiles. 1`] = `
{
  "associated": {
    "activitySubscription": {
      "allowSubscriptions": "followers",
    },
    "chat": {
      "allowIncoming": "none",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "displayName": "dan",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": [],
  "postsCount": 0,
  "viewer": {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`indexing > indexes profiles. 2`] = `
{
  "associated": {
    "activitySubscription": {
      "allowSubscriptions": "followers",
    },
    "chat": {
      "allowIncoming": "none",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "displayName": "danny",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": [],
  "postsCount": 0,
  "viewer": {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`indexing > indexes profiles. 3`] = `
{
  "associated": {
    "activitySubscription": {
      "allowSubscriptions": "followers",
    },
    "chat": {
      "allowIncoming": "none",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "labels": [],
  "postsCount": 0,
  "viewer": {
    "blockedBy": false,
    "muted": false,
  },
}
`;
